python day3 trainings

--- a/Day3_python_training.ipynb
+++ b/Day3_python_training.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,10 +1227,417 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "246.51\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionary reader used by csv, returs the csv as dictionary, we can iterate over the rows but not by index,\\\n",
+    "# by using the column name or header.\n",
+    "tip_sum=0\n",
+    "\n",
+    "with open('tips.csv') as f:\n",
+    "    rdr = csv.DictReader(f)\n",
+    "    for row in rdr:\n",
+    "        if row['sex'] == 'Female':\n",
+    "            tip_sum += float(row['tip'])\n",
+    "print(tip_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'hostname': 'mac1',\n",
+       "  'ip': ['192.168.1.18', '10.10.2.9'],\n",
+       "  'proc': 'i5',\n",
+       "  'mem': 128,\n",
+       "  'os': {'base': 'win32', 'bitsize': 32}},\n",
+       " {'hostname': 'mac2',\n",
+       "  'ip': ['192.168.1.18', '10.10.2.9'],\n",
+       "  'proc': 'i5',\n",
+       "  'mem': 128,\n",
+       "  'os': {'base': 'win32', 'bitsize': 32}}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open('data.json')\n",
+    "dc = json.load(f)\n",
+    "dc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type (dc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(dc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#memory of first machine\n",
+    "\n",
+    "dc[0]['mem']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'192.168.1.18'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#first ip address of second machine\n",
+    "dc[1]['ip'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'hostname': 'mac1',\n",
+       "  'ip': ['192.168.1.18', '10.10.2.9'],\n",
+       "  'proc': 'i5',\n",
+       "  'mem': 128,\n",
+       "  'os': {'base': 'win32', 'bitsize': 32}},\n",
+       " {'hostname': 'win2',\n",
+       "  'ip': ['192.168.1.18', '10.10.2.9', '22.10.34.1'],\n",
+       "  'proc': 'i5',\n",
+       "  'mem': 128,\n",
+       "  'os': {'base': 'win32', 'bitsize': 32}}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dc[1]['hostname']=\"win2\"\n",
+    "dc[1]['ip'].append(\"22.10.34.1\")\n",
+    "dc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outf = open('dcmod.json', 'w')\n",
+    "json.dump(dc,outf) # will create a file but won't write into the file\n",
+    "\n",
+    "outf.flush()# after adding the flush "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93\n",
+      "2536.67\n",
+      "27.276021505376345\n"
+     ]
+    }
+   ],
+   "source": [
+    "count =0\n",
+    "age = 0\n",
+    "with open('titanic.csv') as f:\n",
+    "    rdr = csv.DictReader(f)\n",
+    "    for row in rdr:\n",
+    "        if row['survived'] == '1' and row['sex'] =='male':\n",
+    "            if row['age'] != '':\n",
+    "                count += 1\n",
+    "                age += float(row['age'])\n",
+    "\n",
+    "print( count)\n",
+    "print(age)\n",
+    "print(age/count)\n",
+    "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('geocode.json') as f:\n",
+    "    geo = json.load(f)\n",
+    "    print(len(geo['results']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'address_components': [{'long_name': 'Dubai', 'short_name': 'Dubai', 'types': ['administrative_area_level_1', 'political']}, {'long_name': 'United Arab Emirates', 'short_name': 'AE', 'types': ['country', 'political']}], 'formatted_address': 'Sheikh Mohamed Bin Zayed Road (E311), Exit 60,Muhaisanah 2 - Dubai - United Arab Emirates', 'geometry': {'location': {'lat': 25.258679, 'lng': 55.410943}, 'location_type': 'GEOMETRIC_CENTER', 'viewport': {'northeast': {'lat': 25.2600279802915, 'lng': 55.41229198029149}, 'southwest': {'lat': 25.2573300197085, 'lng': 55.4095940197085}}}, 'place_id': 'ChIJocpip3FeXz4RbMBhekhoTrI', 'types': ['establishment', 'point_of_interest']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('geocode.json') as f:\n",
+    "    geo = json.load(f)\n",
+    "    address=geo['results'][0]\n",
+    "    print(address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['address_components', 'formatted_address', 'geometry', 'place_id', 'types'])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "address.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sheikh Mohamed Bin Zayed Road (E311), Exit 60,Muhaisanah 2 - Dubai - United Arab Emirates'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "address['formatted_address']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.258679\n",
+      "55.4114503\n"
+     ]
+    }
+   ],
+   "source": [
+    "# latitude and longitude\n",
+    "print(geo['results'][0]['geometry']['location']['lat'])\n",
+    "print(geo['results'][1]['geometry']['location']['lng'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sheikh Mohamed Bin Zayed Road (E311), Exit 60,Muhaisanah 2 - Dubai - United Arab Emirates 25.258679 55.410943\n",
+      "Dubai - United Arab Emirates 25.2606109 55.4114503\n"
+     ]
+    }
+   ],
+   "source": [
+    "for result in geo['results']:\n",
+    "    location =result['geometry']['location']\n",
+    "    print(result['formatted_address'],location['lat'], location['lng'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(n):\n",
+    "    return n**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def g(h,n):\n",
+    "    return h(n)+1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "401"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g(f,20)"
+   ]
   }
  ],
  "metadata": {
